--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
+    "@apollo/server": "^4.10.1",
+    "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1"
   }
 }
