--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/client": "^3.9.7",
     "@apollo/server": "^4.10.1",
     "apollo-server-express": "^3.13.0",
+    "express": "^4.18.3",
     "graphql": "^16.8.1"
   }
 }
