--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.7",
+    "@apollo/react-hooks": "^4.0.0",
     "@apollo/server": "^4.10.1",
+    "apollo-boost": "^0.4.9",
     "apollo-server-express": "^3.13.0",
     "express": "^4.18.3",
     "graphql": "^16.8.1"
